fix ui bug in comment template
report link section sometimes overlapped the comment body text in the
viewport; added total vote count to template

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -33,6 +33,10 @@ body {
   margin: 0;
 }
 
+.no-padding {
+  padding: 0;
+}
+
 .orange {
   color: @brand-primary !important;
 }
